# ptibot

./: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
cogs/: admin.py  calendar.py  common.py  github.py  mistral.py  news.py  reminders.py  todo.py  tools.py  youtube.py
cogs/api/: api.py
ui/: announcement.py  confirm.py
